rename agi script

--- a/dialplan/becky.conf
+++ b/dialplan/becky.conf
@@ -44,7 +44,7 @@ exten => t,1,Goto(s,loop)
 exten => s,1,NoOp(checking for spammer)
 same => n,NoOp(${CALLERID(num)})
 same => n,NoOp(${CALLERID(name)})
-same => n,AGI(${BECKY_DIR}/agi/rate_limit.py)
+same => n,AGI(${BECKY_DIR}/agi/call_limit.py)
 same => n,GotoIf($[${caller_allowed}=0]?becky-reject-call,s,1)
 same => n,Goto(becky-answer,s,1)
 
