move config variables into its own file

--- a/dialplan/becky.conf
+++ b/dialplan/becky.conf
@@ -11,24 +11,9 @@
 ; It can also serve as an example of how to go about constucting IVRs in
 ; asterisk.
 ;
+; don't forget to include becky/dialplan/becky_config.conf somewhere
+; in your asterisk config !
 
-[globals](+)
-
-; number of seconds to wait before replaying a prompt
-BECKY_TIMEOUT=5
-
-; number of seconds to wait after a recording
-BECKY_SILENCE=1
-
-; total time allowed for a phone call with becky. Used to prevent
-; spam and overbilling attacks
-BECKY_MAX_CONVERSATION=300
-
-; folder with various files needed for the becky ivr
-BECKY_DIR=/var/lib/asterisk/becky
-
-; directory where to save recordings. must be writable by user asterisk
-BECKY_RECORDINGS=/var/lib/asterisk/becky/recordings
 
 ; IVR template. When user presses an unknown keypad or doesn't press
 ; any key after BECKY_TIMEOUT seconds, replay the last prompt (labeled as 'loop')
