rename variable to something more meaningful

--- a/dialplan/becky.conf
+++ b/dialplan/becky.conf
@@ -42,7 +42,7 @@ same => n,Hangup()
 ; (The average time needed to complete the IVR is between 1 and 2 minutes)
 [becky-answer]
 exten => s,1,Answer(500)
-same => n,Set(TIMEOUT(absolute)=${BECKY_MAX_CONVERSATION})
+same => n,Set(TIMEOUT(absolute)=${BECKY_MAX_DURATION})
 same => n,Goto(becky-welcome,s,1)
 
 ; ===PROMPT=== vous avez rejoint la boite vocale de becky. veuillez laisser un message
