improve spam protection
 - move agi script configuration into its own file
 - check for concurrent calls
 - check for calls per minute
 - send an email alert when a spammer is detected

--- a/dialplan/becky.conf
+++ b/dialplan/becky.conf
@@ -22,18 +22,20 @@
 exten => i,1,Goto(s,loop)
 exten => t,1,Goto(s,loop)
 
-; Simple spam protection to prevent spammers from abusing my bandwidth or
-; overbilling my VoIP account. By default, a phone number is only allowed to call 
-; 5 times per day.
+; Spam protection to prevent spammers from abusing bandwidth or
+; overbilling my VoIP account. 
 [becky-spam-protect]
-exten => s,1,NoOp(checking for spammer)
+exten => s,1,NoOp(becky spam protection)
 same => n,NoOp(${CALLERID(num)})
 same => n,NoOp(${CALLERID(name)})
 same => n,AGI(${BECKY_DIR}/agi/call_limit.py)
-same => n,GotoIf($[${caller_allowed}=0]?becky-reject-call,s,1)
-same => n,Goto(becky-answer,s,1)
+same => n,GotoIf($[${CALL_ALLOWED}=1]?becky-answer,s,1)
 
-; Spammer detected. Send a busy signal and end the call.
+; if the AGI script fails for some reason, or the call isn't allowed,
+; then reject the call
+same => n,Goto(becky-reject-call,s,1)
+
+; context used for rejecting spammers
 [becky-reject-call]
 exten => s,1,Congestion(0)
 same => n,Hangup()
